Matching Game: Improved "next" behavior
Matching Game: Animate to the correct answer
Matching Game: Fixed: buttons don't appear for the left scale
Matching Game: Fixed bugs in button enable/disable when autospin + max/min reached
Matching Game: Show a smilie face and score readout when checking the answer and it is right
Matching Game: Play audio for right/wrong answers
Matching Game: After getting it wrong, hide the "check answer" button until they remove something from the platform or put something else up there.
Matching Game: Started adding "try again"/"show answer" buttons
Matching Game: Extended max level to 6
Matching Game: Wired up game dialog with audio settings
Matching Game: Added dialog for game start
Added docs for regression testing
Regression test: store results in separate thread and improved performance
Converted from F2 updates to F
Isolated sources of randomness
Send messages in matching game
Send messages for audio check box
Send different messages for representations in equality lab
Send messages when number line knobs are dragged
Send messages when the lock is toggled
Send messages when the scaled up value changes
Send messages when the container state changes
Added messages for changing representations
Added messages for dragging slices
Added messages for numerator and denominator spinners
Added messages for max spinner
Added sim sharing event messages
Make public properties private in SpinnerButtonNode, to confirm that they don't need to be exposed (and some of them don't really need to be properties)
Refactored RadioButtonStrip for use in fluid pressure and flow
# 0.00.58 (62682) Mar 20, 2012
Equality Lab: Fixed: If in number line when pressing "reset all", it creates 6 instead of 4 containers on each side
# 0.00.57 (62599) Mar 19, 2012
Intro: Added different colors for horizontal bars, vertical bars and orange glasses
# 0.00.56 (62498) Mar 12, 2012