@@ -1,3 +1,4 @@
+Matching Game: Fixed: User shouldn't be able to interact with any fractions while showing clues or correct answer
 Matching Game: Improved "next" behavior
 Matching Game: Animate to the correct answer
 Matching Game: Fixed: buttons don't appear for the left scale
